# klsframe

./: .gitignore  CHANGELOG.txt  CI.py  LICENSE.txt  README.md  app_example.json  gui_preset20221122164209.json  notes.md  pyproject.toml
doc/: worker.md  wrapper.md
klsframe/: APIworker.py  __about__.py  __init__.py  cli.py  gui.py  guiLayout.py  stats.json  worker.py
klsframe/cli/: __init__.py  cli.py
klsframe/gui/: gui.py  guiLayout.py
klsframe/protypes/: kdicts.py  klists.py  kstrings.py
klsframe/system/: system.py
klsframe/utilities/: dataframe.py  serializer.py  statistics.py  utils.py
klsframe/workers/: APIworker.py  autobot.py  desktopWorker.py  webWorker.py
tests/: cliTest.py  dataframeTest.py  guiLayoutTest.py  kdictTest.py  klistTest.py  kstringTest.py  serializerTest.py  statisticsTest.py  systemTest.py  utilsTest.py  workerTest.py
