[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klsframe"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Ramon Hernandez Leon", email = "rhdezl05@gmail.com" },
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Productivity',
  'Operating System :: Windows :: Linux',
  'License :: OSI Approved :: MIT License',
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/klsframe#readme"
Issues = "https://github.com/unknown/klsframe/issues"
Source = "https://github.com/unknown/klsframe"

[tool.hatch.version]
path = "klsframe/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=klsframe --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "klsframe/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
